--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "cookies-next": "^4.2.1",
     "next": "^14.2.4",
     "notistack": "^3.0.1",
+    "quill": "^2.0.2",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quilljs": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
