--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/auth/handleSignInWithGoogle.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "utils/auth/handleSignInWithGoogle.js", "components/Inputs/RichText/Editor.rsx", "app/drinks/forms/Instructions.jsx"],
   "exclude": ["node_modules"]
 }
