--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "quill-delta-to-html": "^0.12.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-quilljs": "^2.0.0"
+    "react-quilljs": "^2.0.0",
+    "sass": "^1.77.6",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
