--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "cookies-next": "^4.2.1",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "notistack": "^3.0.1",
     "quill": "^2.0.2",
     "quill-delta-to-html": "^0.12.1",
