--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "crons": [
-    {
-      "path": "/api/cron",
-      "schedule": "0 23 * * *"
-    }
+    { "path": "/api/cron/supabase-keepalive", "schedule": "0 6 * * *" }
   ]
 }
