--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,25 +18,29 @@
     "@supabase/supabase-js": "^2.43.5",
     "@tailwindcss/forms": "^0.5.7",
     "cookies-next": "^4.2.1",
-    "next": "^14.2.4",
+    "next": "15.5.0",
     "next-themes": "^0.3.0",
     "notistack": "^3.0.1",
     "quill": "^2.0.2",
     "quill-delta-to-html": "^0.12.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-quilljs": "^2.0.0",
     "sass": "^1.77.6",
     "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.7"
   }
 }
